[gd_scene load_steps=4 format=3 uid="uid://syf0vlorkp5"]

[ext_resource type="Texture2D" uid="uid://c4hvxnkiy5pho" path="res://Art/OIG3 (1).jpg" id="1_8sikx"]
[ext_resource type="Script" path="res://Scenes/level_select_screen.gd" id="1_tcwgt"]
[ext_resource type="Texture2D" uid="uid://csccs4o6i3geq" path="res://Art/Images/Other/padlock.png" id="3_p6mlp"]

[node name="LevelSelectScreen" type="Control"]
layout_mode = 3
anchor_right = 1.044
anchor_bottom = 1.082
offset_right = -90.688
offset_bottom = -120.136
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tcwgt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -392.0
offset_right = 48.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8sikx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Select level"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer3" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer4" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer5" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer6" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer7" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer8" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 1"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Level 2"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Button2"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 524.0
offset_bottom = 524.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_p6mlp")

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Level 3"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Button3"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 524.0
offset_bottom = 524.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_p6mlp")

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Level 4"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Button4"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 524.0
offset_bottom = 524.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_p6mlp")

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 534.0
offset_right = 231.0
offset_bottom = 603.0
theme_override_font_sizes/font_size = 25
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
